code/6/prod/k8s/database.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  template:
    metadata:
      name: database
      labels:
        app: database         
    spec:
      containers:
      - name: database
        image: mysql:5.7  
        ports:
        - containerPort: 3306
          name: mysql                               
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: database
  selector:
    app: database
