code/6/prod/k8s/web.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  template:
    metadata:
      name: web
      labels:
        app: web         
    spec:
      containers:
      - name: web
        image: mendrugory/notejam  
        ports:
        - containerPort: 80
          name: web                               
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - port: 80
    targetPort: 80
    name: web
  selector:
    app: web
  type: NodePort
